<resources>
    <string name="app_name">Emergency Health Services</string>
    <string name="pateintDetails">Patient Details</string>
    <string name="pateintFName">Patient First Name : </string>
    <string name="pateintLName">Patient Last Name : </string>
    <string name="pateintSSN">SSN : </string>
    <string name="pateintEmail">Email : </string>
    <string name="pateintPhone">Phone : </string>
    <string name="pateintEmergencyContact">Emergency Contact : </string>
    <string name="pateintPassword">Password : </string>
    <string name="Search">Search</string>
    <string name="Patient">Patient  </string>
    <string name="Doctor">Doctor  </string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Registration">Registration</string>
    <string name="ConfirmPassword">Confirm Password :</string>
    <string name="Cancel">Cancel</string>
    <string name="HospitalName">Hospital Name</string>
    <string name="HospitalAddress">Hospital Address</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="SSN">SSN</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword2">Confirm Password</string>
    <string name="Phone">Phone</string>
</resources>
