<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="#ffffff"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.spatil32.emergency_health_services.MainActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/applicationImage"
                    android:src="@drawable/application"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:id="@+id/lblFormName"
                    android:layout_below="@+id/applicationImage"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblFormName"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/switchButton"
                    android:checked="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblFormName"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toLeftOf="@id/switchButton"
                    android:text="@string/Patient"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblFormName"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/switchButton"
                    android:text="@string/Doctor"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_below="@id/switchButton"
                    android:id="@+id/textInputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:hint="Username"
                        android:id="@+id/txtLoginEmail"
                        android:textSize="20dp"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/textInputLayoutUsername"
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:id="@+id/txtLoginPassword"
                        android:inputType="textPassword"
                        android:textSize="20dp"
                        android:layout_below="@id/txtLoginEmail"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:textColor="#5b5dc9"
                    android:textSize="20dp"
                    android:id="@+id/btnLoginDoctor"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textInputLayoutPassword"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttons"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Register"
                    android:textColor="#5b5dc9"
                    android:textSize="20dp"
                    android:id="@+id/btnRegisterDoctor"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btnLoginDoctor"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttons"/>
            </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>